tools/tree-sitter-chialisp/test/corpus/atoms.txt
================================================================================
Hex literals, integers and negative numbers
================================================================================

(0x17 0x0a1B2c 12345 -42 0)

--------------------------------------------------------------------------------

(source_file
  (list
    (hex)
    (hex)
    (number)
    (number)
    (number)))

================================================================================
Strings with escapes, both quote characters
================================================================================

("plain" "a\"b" 'single' "back\\slash")

--------------------------------------------------------------------------------

(source_file
  (list
    (string)
    (string)
    (string)
    (string)))

================================================================================
Dot in dotted-pair position
================================================================================

(defun curry_hashes (mod_hash . curry_parameter_hashes)
  (q . (x))
)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (symbol)
    (list
      (symbol)
      (dot)
      (symbol))
    (list
      (symbol)
      (dot)
      (list
        (symbol)))))

================================================================================
Bare minus is a symbol, not a number
================================================================================

(- (lsh 1 128) 1)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (list
      (symbol)
      (number)
      (number))
    (number)))

================================================================================
Longest match wins over the specific atom kinds
================================================================================

(0xdeadZZ 123abc foo.clib @ #q .5)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (symbol)
    (symbol)
    (symbol)
    (symbol)
    (symbol)))

================================================================================
Constant table of hex pairs with interleaved comments
================================================================================

(defconstant constant_tree (
    (0x4b .  ; = `(sha256 1)`
    0x9d) .  ; = `(sha256 1 1)`
    (0x02 .
    0xa8)
  )
)

--------------------------------------------------------------------------------

(source_file
  (list
    (symbol)
    (symbol)
    (list
      (list
        (hex)
        (dot)
        (comment)
        (hex))
      (dot)
      (comment)
      (list
        (hex)
        (dot)
        (hex)))))
